feat: add Vercel analytics

--- a/public/rules.html
+++ b/public/rules.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Rules - Memeotica</title>
-    <link rel="icon" type="image/png" href="Favicon memeotica.png">
+    <link rel="icon" type="image/png" href="/images/Favicon memeotica.png">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/rules.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/rules.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,22 +26,22 @@
                     <span class=" w-px block bg-white/30"></span>   
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="index.html">
+                    <a class="px-1 w-full" href="/">
                         Home
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="rules.html">
+                    <a class="px-1 w-full" href="/rules">
                         Rules
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="coming.html">
+                    <a class="px-1 w-full" href="/#rewards">
                         Rewards
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="vote.html">
+                    <a class="px-1 w-full" href="/vote">
                         Voting
                     </a>
                 </li>
@@ -51,23 +51,23 @@
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="roadmap.html">
+                    <a class="px-1 w-full" href="/#roadmap">
                         Roadmap
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="leaderboard.html">
+                    <a class="px-1 w-full" href="/#leaderboard">
                         Leaderboard
                     </a>
                 </li>
                 <li>
                     <a target="_blank" href="https://x.com/Memeotica_Game">
-                        <img src="public/images/header/x.svg" alt="Twitter X" class="w-5 h-5">
+                        <img src="/images/header/x.svg" alt="Twitter X" class="w-5 h-5">
                     </a>
                 </li>
                 <li>
                     <a target="_blank" href="https://t.me/memeotica_game">
-                        <img src="public/images/header/tg.svg" alt="Telegram" class="w-5 h-5">
+                        <img src="/images/header/tg.svg" alt="Telegram" class="w-5 h-5">
                     </a>
                 </li>
             </ul>
@@ -84,22 +84,22 @@
             </button>
             <ul class="divide-y divide-white/10">
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="index.html">
+                    <a class="px-1 py-4 block w-full" href="/">
                         Home
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="rules.html">
+                    <a class="px-1 py-4 block w-full" href="/rules">
                         Rules
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="coming.html">
+                    <a class="px-1 py-4 block w-full" href="/#rewards">
                         Rewards
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="vote.html">
+                    <a class="px-1 py-4 block w-full" href="/vote">
                         Voting
                     </a>
                 </li>
@@ -109,12 +109,12 @@
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="roadmap.html">
+                    <a class="px-1 py-4 block w-full" href="/#roadmap">
                         Roadmap
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="leaderboard.html">
+                    <a class="px-1 py-4 block w-full" href="/#leaderboard">
                         Leaderboard
                     </a>
                 </li>
@@ -122,9 +122,9 @@
         </div>
     </div>
     <section class="  relative -translate-y-16 max-md:overflow-hidden">
-        <img src="public/images/rules/welcome.svg" class=" w-full left-1/2 -translate-x-1/2 max-md:max-w-[200%] absolute inset-0">
+        <img src="/images/rules/welcome.svg" class=" w-full left-1/2 -translate-x-1/2 max-md:max-w-[200%] absolute inset-0">
         <div class=" relative z-10 pt-20">
-            <img src="public/images/memoitica.svg" class=" w-72 h-64 object-cover mx-auto">
+            <img src="/images/memoitica.svg" class=" w-72 h-64 object-cover mx-auto">
             <h1 class=" text-5xl md:text-[4.5rem] leading-none text-center font-light">Rules</h1>
             <h2 class=" max-md:text-xl max-w-[28rem] text-center mt-4 mx-auto">Follow the game rules and win extra rewards</h2>
         </div>
@@ -132,50 +132,50 @@
 
     <section>
         <div class=" relative md:max-w-[56rem] max-md:items-center mx-auto flex flex-col gap-14 ">
-            <img class=" md:hidden w-16 -top-6 h-full absolute " src="/public/images/rules/vector.svg" alt="line">
-            <img class=" md:hidden w-16 h-full absolute blur-3xl" src="/public/images/rules/vector.svg" alt="line">
-            <img class=" max-md:hidden w-full h-full absolute inset-0" src="/public/images/rules/line.svg" alt="line">
-            <img class=" max-md:hidden w-full h-full blur-3xl absolute inset-0" src="/public/images/rules/line.svg" alt="line">
+            <img class=" md:hidden w-16 -top-6 h-full absolute " src="/images/rules/vector.svg" alt="line">
+            <img class=" md:hidden w-16 h-full absolute blur-3xl" src="/images/rules/vector.svg" alt="line">
+            <img class=" max-md:hidden w-full h-full absolute inset-0" src="/images/rules/line.svg" alt="line">
+            <img class=" max-md:hidden w-full h-full blur-3xl absolute inset-0" src="/images/rules/line.svg" alt="line">
             <div class=" shadow-card md:mx-auto p-6 pr-9 rounded-3xl transition-all hover:-translate-y-5 font-semibold text-2xl relative">
                 Vote on Political<br> Events
-                <img src="public/images/home/success.svg" class="md:w-20 rotate-6 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 z-10">
-                <img src="public/images/home/success.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 blur-xl">
+                <img src="/images/home/success.svg" class="md:w-20 rotate-6 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 z-10">
+                <img src="/images/home/success.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 blur-xl">
             </div>
             <div class=" md:flex contents md:px-16 justify-between">
                 <div class=" shadow-card  p-6 pr-9 rounded-3xl transition-all hover:-translate-y-5 font-semibold text-2xl relative">
                     Trade community<br> picked coins
-                    <img src="public/images/rules/bitcoin.svg" class="md:w-20 rotate-12 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 z-10">
-                    <img src="public/images/rules/bitcoin.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 blur-xl">
+                    <img src="/images/rules/bitcoin.svg" class="md:w-20 rotate-12 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 z-10">
+                    <img src="/images/rules/bitcoin.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 blur-xl">
                 </div>
                 <div class=" shadow-card  p-6 pr-9 rounded-3xl transition-all hover:-translate-y-5 font-semibold text-2xl relative">
                     Climb the <br>leaderboard
-                    <img src="public/images/home/champion.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 z-10">
-                    <img src="public/images/home/champion.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 blur-xl">
+                    <img src="/images/home/champion.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 z-10">
+                    <img src="/images/home/champion.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 blur-xl">
                 </div>
             </div>
             <div class=" md:flex contents items-center justify-between">
                 <div class=" shadow-card  p-6 pr-9 md:pb-3 max-md:pb-2 rounded-3xl transition-all hover:-translate-y-5 font-semibold text-2xl relative">
                     Earn Card NFTs
                     <p class=" text-[#FDB022] text-sm bg-black/40 px-3 py-1.5 rounded-full w-fit">Limited edition</p>
-                    <img src="public/images/home/cards.svg" class="md:w-24 rotate-6 absolute -bottom-7 -right-4 md:h-24 w-32 h-32 z-10">
-                    <img src="public/images/home/cards.svg" class="md:w-24 absolute -bottom-7 -right-4 md:h-24 w-32 h-32 blur-xl">
+                    <img src="/images/home/cards.svg" class="md:w-24 rotate-6 absolute -bottom-7 -right-4 md:h-24 w-32 h-32 z-10">
+                    <img src="/images/home/cards.svg" class="md:w-24 absolute -bottom-7 -right-4 md:h-24 w-32 h-32 blur-xl">
                 </div>
                 <div class=" shadow-card  p-6 pr-9 rounded-3xl transition-all hover:-translate-y-5 font-semibold text-2xl relative">
                     Upgrade your <br>cards level
-                    <img src="public/images/rules/up.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 z-10">
-                    <img src="public/images/rules/up.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 blur-xl">
+                    <img src="/images/rules/up.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 z-10">
+                    <img src="/images/rules/up.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 blur-xl">
                 </div>
             </div>
             <div class=" md:flex contents md:px-24 justify-between">
                 <div class=" shadow-card  p-6 pr-9 rounded-3xl transition-all hover:-translate-y-5 font-semibold text-2xl relative">
                     Battle with <br> other users
-                    <img src="public/images/home/sword.svg" class="md:w-20 rotate-12 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 z-10">
-                    <img src="public/images/home/sword.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 blur-xl">
+                    <img src="/images/home/sword.svg" class="md:w-20 rotate-12 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 z-10">
+                    <img src="/images/home/sword.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 blur-xl">
                 </div>
                 <div class=" shadow-card  p-6 pr-9 rounded-3xl transition-all hover:-translate-y-5 font-semibold text-2xl relative">
                     Upgrade your <br>cards level
-                    <img src="public/images/home/jewelry.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 z-10">
-                    <img src="public/images/home/jewelry.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 blur-xl">
+                    <img src="/images/home/jewelry.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 z-10">
+                    <img src="/images/home/jewelry.svg" class="md:w-20 absolute -bottom-7 -right-4 md:h-20 w-32 h-32 blur-xl">
                 </div>
             </div>
         </div>
@@ -352,7 +352,7 @@
     <footer>
         <div class=" flex content text-right max-md:text-lg justify-between md:justify-center text-white/50 gap-10 items-center border-t border-white/20 mt-14 py-4 ">
             <p class=" max-md:hidden">Memeotica. 2025</p>
-            <img src="public/images/memoitica.svg" class="  w-24 h-24 ">
+            <img src="/images/memoitica.svg" class="  w-24 h-24 ">
             <div class=" ">
                 <p class="max-md:mb-2 md:hidden">Memeotica. 2025</p>
                 <p class=" ">© All rights reserved</p>
@@ -360,6 +360,6 @@
         </div>
     </footer>
 
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="/js/index.js"></script>
 </body>
 </html> 
