--- a/public/rules.html
+++ b/public/rules.html
@@ -360,6 +360,48 @@
         </div>
     </footer>
 
-    <script type="module" src="/js/index.js"></script>
+    <script>
+        (()=>{
+            const menu = document.getElementById("menu");
+            const drawer_overflow = document.querySelectorAll(".drawer-overflow");
+            const drawer_close = document.querySelectorAll(".drawer-close");
+
+            const drawer_menu = document.getElementById("drawer-menu");
+
+            const handleClick = (e) => {
+                drawer_menu.setAttribute("data-opened", drawer_menu.getAttribute("data-opened") == "true" ? "false" : "true");
+            }
+
+            const handleClose = (e) => {
+                e.target.closest(".drawer").setAttribute("data-opened", "false");
+            }
+
+            drawer_overflow.forEach(el=>{
+                el.addEventListener("click", handleClose);
+            });
+
+            drawer_close.forEach(el=>{
+                el.addEventListener("click", handleClose);
+            });
+
+            if (menu) {
+                menu.addEventListener("click", handleClick);
+            }
+
+            document.addEventListener('DOMContentLoaded', () => {
+                const titleElement = document.querySelector('h1');
+                if (titleElement) {
+                    titleElement.textContent = 'Rules';
+                }
+                
+                setTimeout(() => {
+                    const titleElement = document.querySelector('h1');
+                    if (titleElement) {
+                        titleElement.textContent = 'Rules';
+                    }
+                }, 100);
+            });
+        })();
+    </script>
 </body>
 </html> 
